tests/failing/while_condition_not_bool.dodo
fn main() {
    while 2 {
        printf("This should not be printed\n");
    }
}
